--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ li {
 
 .image {
     position: relative;
-    padding-right: 38rem;
+    padding-right: 34rem;
     float: right;
 
 }
@@ -123,5 +123,7 @@ li {
     width: 500px;
     height: 500px;
     position: absolute;
-    transform: translateY(-50%);
+    transform: translateY(-66%);
+    object-fit: cover;
+    
 }
