--- a/style.css
+++ b/style.css
@@ -17,22 +17,26 @@ body {
 }
 
 .page1 {
+    position: relative;
     height: 100vh;
     width: 100vw;
     background-color: #1B2430;
 }
 
 .page2 {
+    position: relative;
     height: 100vh;
     width: 100vw;
     background-color: #1B2430;
 }
 .page3 {
+    position: relative;
     height: 100vh;
     width: 100vw;
     background-color: #1B2430;
 }
 .page4 {
+    position: relative;
     height: 100vh;
     width: 100vw;
     background-color: #1B2430;
@@ -257,6 +261,59 @@ hr{
     text-align: center;
     padding-right: 3rem;
     padding-left: 3rem;
+}
+
+.portfolio_container{
+    width: 100%;
+    height: 200px;
+    display: contents;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2%;
+}
+
+.portfolio_container h1,p{
+    text-align: center;
+    color: #F1EFEF;
+} 
+
+.portfolio_container p{
+    margin-top: 2%;
+}
+
+.porfolio_content{
+    width: 100%;
+    margin-top: 4%;
+}
+
+.porfolio_content .work1{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 300px;
+    cursor: pointer;
+}
+
+.porfolio_content .work2{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 300px;
+    margin-top: 5%;
+    cursor: pointer;
+}
+
+.porfolio_content img{
+    width: 400px;
+    height: 250px;
+    object-fit: cover;
+}
+
+.porfolio_content img:hover{
+    scale: 1.1;
+    transition: 1s;
 }
 
 .contact{
