--- a/style.css
+++ b/style.css
@@ -317,7 +317,9 @@ hr{
 }
 
 .contact{
-    padding-top:1rem;
+    padding-top:4%;
+    width: 100%;
+    height: 400px;
 }
 .contact_container{
     display: flex;
@@ -329,9 +331,11 @@ hr{
 }
 .contact_left h1{
     padding-top: 1rem;
+    text-align: center;
 }
 .contact_left p{
     margin-top: 30px;
+    text-align: center;
 }
 .contact_left p i{
     color: #F1EFEF;
@@ -342,7 +346,7 @@ hr{
     flex-basis: 60%;
 }
 .contact_right form{
-    width: 100%;
+    width: 70%;
 }
 form input,textarea{
     width: 100%;
@@ -364,11 +368,14 @@ form .btn{
     
 }
 .copyright{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    text-align: center;
-    padding: 25px 0;
-    color: #F1EFEF;
-    font-weight: 300;
-    padding-top: 20rem;
-    font-weight: 400;
+    height: 50px;
+    background: #fff;
+    margin-top: 21rem;
+}
+.copyright p{
+    color: #000;
 }
